# Waqar-Qureshi-Portfolio

./: .gitignore  CLAUDE.md  CURRENT_PLAN.md  Home.py  PROJECT_TASKS.md  README.md  REQUIREMENTS.txt  debug_statscan.py  debug_vectors.py  env_var.py  functions_testing.ipynb  metadata_36100434.json  pyproject.toml  requirements.txt
01generate_db/: db_generate.py
conductor/: product.md  tech-stack.md  tracks.md
conductor/tracks/equity_playroom_strategy_backtester_ui_input_20260111/: metadata.json  plan.md  spec.md
config/: datasets.py
functions/: average_green_days.py  firebase_service.py  generate_db.py  generate_ta.py  generate_timeframe.py  last_business_date.py  scratch_paper.py  signal_generators.py  statscan_api.py
pages/: 1_Analysis.py  2_Equity_Playroom.py
src/auth/: google_auth.py  permissions.py
src/components/: admin.py  auth_ui.py  charts.py  sidebar.py
src/config/: constants.py  settings.py
src/data/: cache_manager.py  fred_datasets.py  statscan_datasets.py
src/services/: firebase_service.py  fred_api.py  statscan_api.py  yfinance_service.py
src/tools/strategy_backtester/: calculations.py  data.py  engine.py  metrics.py  (+2 more)
streamlit/: Home.py  requirements.txt
streamlit/functions/: generate_databases.py  generate_db.py  generation_debt.py  generation_equities.py  generations.py  graphing_results.py  scratch_paper.py  signal_generators.py
streamlit/pages/: 1 - Economy Visualization.py  1 - WTDOLLE - Stock Market Analysis.py  1 - WTDOLLE.py  2 - Average_Green_Days.py  2 - REACT - Resume Editor Tool.py  3 - ResumeBuilder.py  WTDOLLE.py
(+3 files in other folders)
