[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.1.0",
    "google-auth>=2.43.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.5.0",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
    "plotly>=6.4.0",
    "pyarrow>=21.0.0",
]
