[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Authlib>=1.3.2",
    "firebase-admin>=7.1.0",
    "google-auth>=2.43.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.5.0",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
    "plotly>=6.4.0",
    "pyarrow>=21.0.0",
    "fredapi>=0.5.2",
    "pandas>=2.2.0",
    "yfinance>=0.2.40",
    "requests>=2.32.0",
    "ta-lib>=0.6.8",
]
